[tool.poetry]
name = "dummy-test-fastAPI"
version = "0.1.0"
description = ""
authors = ["kaz88903 <taha.kazi@lumentum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pyinstaller = "^6.11.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
